recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: not found: value rotate
      rotate(90);
      ^